--- a/P1/Makefile
+++ b/P1/Makefile
@@ -1,7 +1,13 @@
 CXX = g++
-CXXFLAGS = -std=c++17 -Wall -Wextra -O0
+CXXFLAGS = -std=c++17 -Wall -Wextra -O3 -fopenmp -mavx2 -mfma -ffast-math -march=native -mtune=native -DNDEBUG
 TARGET = tests
 SRC = mlp_sgd.cpp tests.cpp globals.cpp matrix.cpp
+BENCH_SRC = mlp_sgd.cpp globals.cpp matrix.cpp bench-runner.cpp
+BENCH_M = 100:1000:100 
+BENCH_N = 100:1000:100
+BENCH_K = 100:1000:100
+BENCH_OUT = bench-results.csv
+BENCH_TARGET = bench-runner
 
 all: $(TARGET)
 
@@ -14,4 +20,8 @@ run: $(TARGET)
 clean:
 	rm -f $(TARGET)
 
+bench: $(BENCH_TARGET) benchmark.py
+	./$(BENCH_TARGET) $(BENCH_M) $(BENCH_N) $(BENCH_K) > $(BENCH_OUT)
+	python3 benchmark.py
+	
 .PHONY: all run clean
