--- a/P1/.vscode/settings.json
+++ b/P1/.vscode/settings.json
@@ -71,6 +71,11 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "bitset": "cpp",
+        "codecvt": "cpp",
+        "csignal": "cpp",
+        "forward_list": "cpp",
+        "set": "cpp"
     }
 }
