--- a/P2/Makefile
+++ b/P2/Makefile
@@ -4,6 +4,7 @@ TARGET = distributedtests
 OBJ = matrix.o distributedmatrix.o distributedtests.o mlp_sgd_distributed.o globals.o
 HEADERS = abstractmatrix.hpp matrix.hpp distributedmatrix.hpp globals.hpp
 NPROC = 4
+BENCH_OUT_DIR = ./
 
 all:
 	$(MAKE) clean && $(MAKE) run
@@ -33,9 +34,9 @@ benchmark: benchmark.cpp $(HEADERS) $(OBJ)
 	@$(CXX) $(CXXFLAGS) -o benchmark benchmark.cpp matrix.o distributedmatrix.o
 	@echo "Running benchmark..."
 	@echo "Using $(NPROC) processes."
-	@mpirun -np $(NPROC) ./benchmark > benchmark_results_$(NPROC)_procs.txt
+	@mpirun -np $(NPROC) ./benchmark > $(BENCH_OUT_DIR)benchmark_results_$(NPROC)_procs.txt
 	@echo "Benchmarking completed."
-	@echo "Results saved to benchmark_results_$(NPROC)_procs.txt."
+	@echo "Results saved to $(BENCH_OUT_DIR)benchmark_results_$(NPROC)_procs.txt."
 clean:
 	rm -f $(OBJ) $(TARGET) *.o benchmark
 
