--- a/P2/Makefile
+++ b/P2/Makefile
@@ -2,6 +2,7 @@ CXX = mpic++
 CXXFLAGS = -std=c++17 -Wall -Wextra -O3 -march=native -mtune=native -ffast-math -funroll-loops 
 TARGET = distributedtests
 OBJ = matrix.o distributedmatrix.o distributedtests.o mlp_sgd_distributed.o globals.o
+BENCH_OBJ = benchmark.o matrix.o distributedmatrix.o
 HEADERS = abstractmatrix.hpp matrix.hpp distributedmatrix.hpp globals.hpp
 NPROC = 4
 OUT_DIR = ./
@@ -15,9 +16,11 @@ $(TARGET): $(OBJ)
 
 matrix.o: matrix.cpp matrix.hpp abstractmatrix.hpp
 	$(CXX) $(CXXFLAGS) -c matrix.cpp
+	ls -la
 
 distributedmatrix.o: distributedmatrix.cpp distributedmatrix.hpp matrix.hpp abstractmatrix.hpp
 	$(CXX) $(CXXFLAGS) -c distributedmatrix.cpp
+	ls -la
 
 distributedtests.o: distributedtests.cpp distributedmatrix.hpp matrix.hpp abstractmatrix.hpp
 	$(CXX) $(CXXFLAGS) -c distributedtests.cpp
@@ -27,11 +30,12 @@ mlp_sgd_distributed.o: mlp_sgd_distributed.cpp globals.hpp abstractmatrix.hpp ma
 
 globals.o: globals.cpp globals.hpp mlp_sgd_distributed.cpp
 	$(CXX) $(CXXFLAGS) -c globals.cpp
+	ls -la
 
 run: $(TARGET)
 	mpirun -np $(NPROC) ./$(TARGET)
 
-build-benchmark: benchmark.cpp $(HEADERS) $(OBJ)
+build-benchmark: benchmark.cpp $(HEADERS) $(BENCH_OBJ)
 	@$(CXX) $(CXXFLAGS) -o benchmark benchmark.cpp matrix.o distributedmatrix.o
 	@echo "Using $(NPROC) processes."
 
